[package]
name = "waker-rust"
version = "0.1.0"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"

[dependencies]
stm32f1xx-hal = { version = "0.5.3", features = ["rt", "stm32f103" ] }
stm32f103xx = "0.11.0"
nb = "1.0.0"
cortex-m-rtic = "0.5.3"
cortex-m = "0.6.3"
cortex-m-rt = "0.6.13"
panic-semihosting = "0.5.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.4"

[features]
default = ["stm32f103"]
doc = []
rt = ["stm32f103xx/rt"]
stm32f103 = []

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
