[package]
name = "waker-rust"
version = "0.1.0"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"

[dependencies]
nb = "1.0.0"
cortex-m-rtic = "0.5.7"
cortex-m = "0.7.3"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.4"
sh1106 = "0.3.4"
embedded-graphics = "0.6.2"
heapless = "0.6.1"
# portable = { path = "portable" }

[dependencies.stm32f1xx-hal]
version = "0.7.0"
features = ["rt", "stm32f103", "medium"]

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
