[package]
name = "waker-rust"
version = "0.1.0"
authors = ["elsuizo <mnoblia@disroot.org>"]
edition = "2018"

[dependencies]
# nb = "1.0.0"
nb = "1.1.0"
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.0"
# cortex-m = "0.7.7"
embedded-hal = "0.2.6"
sh1106 = "0.4.0"
embedded-graphics = "0.7.1"
heapless = "0.7.16"
panic-semihosting = "0.6.0"
# panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# rtt-target = { version = "0.3.1", features = ["cortex-m"] }
# portable = { path = "portable" }

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
